# geolipi

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SA.md  genindex.html  geometry_nodes.html  index.html  install.html  intro.html  languages.html  languages.md  modules.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  symbolic.html  torch_compute.html
assets/: example_inferred_programs.pkl
docs/: conf.py  geometry_nodes.rst  index.rst  install.md  intro.md  languages.md  modules.rst  symbolic.rst  torch_compute.rst
examples/: language_demo.ipynb
geolipi/: __init__.py
geolipi/geometry_nodes/: bl_utils.py  blender_example.py  csg_visualizer.py  evaluate_graph.py  geonodes.py  materials.py  mcsg_visualize.py  utils.py
geolipi/languages/: cp_fusion.py  lat_csg2d.py  macro_csg2d.py  macro_csg3d.py  plad_csg.py  primal_csg.py  primal_csg3d.py
geolipi/sdf/: __init__.py  executor.py  sdf_functions.py  sketcher.py  transforms.py
geolipi/symbolic/: __init__.py  arg_types.py  base.py  base_expr_class.py  base_symbolic.py  color.py  combinators.py  common.py  curve_extrusion_3d.py  curves.py  primitives.py  primitives_2d.py  primitives_3d.py  primitives_higher.py  reference.py  registry.py  resolve.py  spec_coverage.py  symbol_types.py  transforms.py  transforms_2d.py  transforms_3d.py  type_system.md  types.py  (+2 more)
notebooks/: advanced_3d_language.ipynb  compiled_execution.ipynb  csg_2d_language.ipynb  csg_3d_language.ipynb  demo.ipynb  parameter_optimization_2d.ipynb  primitive_fusion_3d_language.ipynb  svg_2d_language.ipynb  torch_sdf2d_examples.ipynb
scripts/: blender_render_example.py  demo.py
tests/: test_basic.py
(+42 files in other folders)
